--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
 
           <section class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
-            <p style="color: white;">
+            <p style="color:white">
               Ahmedabad <br>
               Gujarat<br>
               India <br>
@@ -185,11 +185,11 @@
             </p>
 
             <aside class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/havishaenterta1" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/people/havisha-entertainment/100090392806465/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/havishaevents/" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.youtube.com/channel/UCnNiUrjbebeeGvfFMj6X7MQ" class="youtube"><i class="fa fa-youtube"></i></a>
+              <a href="https://www.linkedin.com/in/havisha-entertainment-75a586267/" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </aside>
 
           </section>
@@ -201,6 +201,7 @@
         &copy; Copyright  <strong>Havisha Events</strong>. All Rights Reserved
       </article>
       <article class="credits">
+        Designed & Developed by Dharmik Gohil <a href="tel:+918160607144">+91 8160607144</a>
       </article>
     </section>
   </footer>
