--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/ring-animation.css" rel="stylesheet">
 
   <style>
         /* Three columns side by side */
@@ -166,10 +167,29 @@
     .director-name{
       font-size: 1.5rem;
     }
+
+    #whatsapp-logo{
+      width: 50px;
+      left: 5vw;
+      position: fixed;
+      top: 84vh;
+      z-index: 9999;
+    }
+
+    @media only screen and (min-width:  768px) {
+      #whatsapp-logo{
+        width: 70px;
+        top: 85vh;
+        left: 3vw;
+      }
+    }
   </style>
 </head>
 
 <body>
+  <a href="https://wa.me/918511363589">
+    <img id="whatsapp-logo" src="img/logos/whatsapp.png">
+  </a>
 
   <header id="header">
     <div class="container">
@@ -197,13 +217,14 @@
     <div class="intro-container wow fadeIn">
       <h1 class="mb-4 pb-0">Havisha <span>Events</span></h1>
       <p class="mb-4 pb-0"><span class="font-18">Let's Celebrate!</span> </p>
-      <a href="#" class="venobox play-btn mb-4" data-vbtype="video"
+      <a href="https://youtu.be/nKk3vKo9QW4" class="venobox play-btn mb-4" data-vbtype="video"
         data-autoplay="true"></a>
     </div>
   </section>
 
-  <main id="main">
+  
 
+  <main id="main">
     <section id="about">
       <article class="container">
         <section class="row">
@@ -339,6 +360,7 @@
       </header>
 
       <section class="owl-carousel gallery-carousel">
+      
         <a href="img/gallery/1.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1.png" alt="havisha event's director photo with south actor"></a>
         <a href="img/gallery/2.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2.png" alt="havisha event's director photo with tv serial artist"></a>
         <a href="img/gallery/3.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3.png" alt="havisha event's director photo with Vindu Dara Singh"></a>
@@ -348,13 +370,14 @@
         <a href="img/gallery/6.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.png" alt="havisha event's director photo with the legendary actor amitabh bachhan"></a>
         <a href="img/gallery/7.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.png" alt="havisha event's director photo with Salman Khan"></a>
         <a href="img/gallery/8.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8.png" alt="havisha event's director photo with salman Khan and its crew"></a>
-        <a href="img/new_gallery/FB_IMG_1676438655883.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676438655883.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676439138528.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676438655883.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
+        <a href="img/gallery/9.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/9.jpg" alt="havisha event's director photo with salman Khan and its crew"></a>
+        <a href="img/gallery/10.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/10.jpg" alt="havisha event's director photo with salman Khan and its crew"></a>
+        <a href="img/gallery/11.png" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/11.jpg" alt="havisha event's director photo with salman Khan and its crew"></a>
+        <a href="img/new_gallery//FB_IMG_1676438655883.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676438655883.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676695709332.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676695709332.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676695715269.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676695715269.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676695719407.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676695719407.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868402598.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868402598.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676868424941.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868424941.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868424941.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868424941.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868430434.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868430434.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868438241.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868438241.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
@@ -378,13 +401,9 @@
         <a href="img/new_gallery/FB_IMG_1676868760616.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868760616.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868877743.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868877743.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868868552.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868868552.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676868866141.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868866141.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868850026.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868850026.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868847393.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868847393.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676868847393.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868847393.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868803124.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868803124.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676868798262.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868798262.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
-        <a href="img/new_gallery/FB_IMG_1676868791760.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868791760.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
         <a href="img/new_gallery/FB_IMG_1676868781082.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/new_gallery/FB_IMG_1676868781082.jpg" alt="havisha event's director photo bollywood artists - celebrity"></a>
       </section>
 
@@ -477,7 +496,7 @@
            <section class="teamDetails">
              <h2 class="director-name">Maulik Rajyaguru</h2>
              <p class="title">Director</p>
-             <a href="tel:123-456-7890">123-456-7890</a>
+             <a href="tel:8511363589">+91 85113 63589</a>
             </section>
           </section>
         </section>
@@ -488,7 +507,7 @@
             <section class="teamDetails">
               <h2 class="director-name">Purushottam Dubey</h2>
               <p class="title">Director</p>
-              <a href="tel:123-456-7890">123-456-7890</a>
+              <a href="tel:9999992263">+91 99999 92263</a>
             </section>
           </section>
         </section>
@@ -499,7 +518,7 @@
           <section class="teamDetails">
             <h2 class="director-name">Bharat Nag</h2>
             <p class="title">Director</p>
-            <a href="tel:123-456-7890">123-456-7890</a>
+            <a href="tel:8879716325">+91 88797 16325</a>
           </section>
         </section>
       </section>
@@ -526,6 +545,16 @@
         <section class="col-lg-3 col-md-4 col-xs-6">
           <section class="supporter-logo">
             <img src="img/logos/ibm.jpg" class="img-fluid" alt="">
+          </section>
+        </section>
+        <section class="col-lg-3 col-md-4 col-xs-6">
+          <section class="supporter-logo">
+            <img src="img/logos/mdh.jpg" class="img-fluid" alt="">
+          </section>
+        </section>
+        <section class="col-lg-3 col-md-4 col-xs-6">
+          <section class="supporter-logo">
+            <img src="img/logos/music_client.jpg" class="img-fluid" alt="">
           </section>
         </section>
       </article>
@@ -642,14 +671,14 @@
         <section class="form">
           <p id="sendmessage">Your message has been sent. Thank you!</p>
           <p id="errormessage"></p>
-          <form action="" method="post" role="form" class="contactForm">
+          <form action="./mail.php" method="POST" role="form" class="contactForm">
             <section class="form-row">
               <section class="form-group col-md-6">
-                <input type="text" name="your name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                 <section class="validation"></section>
               </section>
               <section class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                 <section class="validation"></section>
               </section>
             </section>
@@ -668,6 +697,8 @@
       </section>
     </section>
   </main>
+
+  
 
   <footer id="footer">
     <section class="footer-top">
@@ -698,17 +729,20 @@
               <strong>Phone:</strong> 
               <a href="tel:+918511363589">+91 85113 63589</a>
               <br>
+              <strong>GST Number:</strong> 
+              <a href="#">24AAGCH5469R1ZT</a>
+              <br>
               <strong>Email:</strong> 
               <a href="mailto:havishaentertainment@gmail.com">havishaentertainment@gmail.com</a>
                <br>
             </p>
 
             <aside class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/havishaenterta1" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/people/havisha-entertainment/100090392806465/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/havishaevents/" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.youtube.com/channel/UCnNiUrjbebeeGvfFMj6X7MQ" class="youtube"><i class="fa fa-youtube"></i></a>
+              <a href="https://www.linkedin.com/in/havisha-entertainment-75a586267/" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </aside>
 
           </section>
@@ -720,6 +754,7 @@
         &copy; Copyright  <strong>Havisha Events</strong>. All Rights Reserved
       </article>
       <article class="credits">
+        Designed & Developed by Dharmik Gohil <a href="tel:+918160607144">+91 8160607144</a>
       </article>
     </section>
   </footer>
