--- a/talent_bank.html
+++ b/talent_bank.html
@@ -80,6 +80,23 @@
       #footer {
         margin-top: 80px;
       }
+
+      .img-container{
+        display: flex; 
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .img-container p{
+        font-size: 1.1rem;
+        text-align: center;
+        font-weight: 700;
+        color: goldenrod;
+      }
+
+      .img-container img{
+        object-fit: cover;
+      }
     </style>
   </head>
 
@@ -145,21 +162,94 @@
       </section>
 
       <section id="tal1" class="tabcontent flex talentBankContent">
-        <img class="galleryImg" src="./img/Talent_bank/actor/1.jpg" alt="akshay kumar photo" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/2.jpg" alt="shahrukh khan" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/3.jpg" alt="john abraham" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/4.jpg" alt="Govinda photo" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/5.jpg" alt="Hritik Roshan" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/6.jpg" alt="Kartik Aryan" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/8.jpg" alt="bollywood actress" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/9.jpg" alt="bollywood actress" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/10.jpg" alt="bollywood actress" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/11.jpg" alt="Shraddha Kapoor" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/12.jpg" alt="Deepika Padukone" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/13.jpg" alt="Katrina Kaif" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/14.jpg" alt="sonu sud" />
-        <img class="galleryImg" src="./img/Talent_bank/actor/15.jpg" alt="shahid kapoor" />
-      </section>
+        <div class="img-container" style="align-items: center;">
+          <img class="galleryImg" src="./img/Talent_bank/actor/salman.jpg" alt="salman khan" />
+          <p>salman khan</p>
+        </div>
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/akshay.jpg" alt="akshay kumar photo" />
+          <p>Akshay Kumar</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/shahrukh.jpg" alt="shahrukh khan" />
+          <p>Shahrukh Khan</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/tiger.jpg" alt="tiger shrof" />
+          <p>Tiger Shroof</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/amir.jpg" alt="amir khan" />
+          <p>Amir Khan</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/3.jpg" alt="john abraham" />
+          <p>John Abraham</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/4.jpg" alt="Govinda photo" />
+          <p>Govinda</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/hritik.jpg" alt="Hritik Roshan" />
+          <p>Hritik Roshan</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/6.jpg" alt="Kartik Aryan" />
+          <p>Kartik Aryan</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/8.jpg" alt="bollywood actress" />
+          <p>Kiara Advani</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/9.jpg" alt="bollywood actress" />
+          <p>Bollywood Actress</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/10.jpg" alt="bollywood actress" />
+          <p>Aishwarya Ray</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/11.jpg" alt="Shraddha Kapoor" />
+          <p>Shraddha Kapoor</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/12.jpg" alt="Deepika Padukone" />
+          <p>Deepika Padukone</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/13.jpg" alt="Katrina Kaif" />
+          <p>Katrina Kaif</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/14.jpg" alt="sonu sud" />
+          <p>sonu sud</p>
+        </div>
+
+        <div class="img-container">
+          <img class="galleryImg" src="./img/Talent_bank/actor/15.jpg" alt="shahid kapoor" />
+          <p>Shahid Kapoor</p>
+        </div>
+
+        <div class="img-container">
+        </section>
+        <p></p>
+      </div>
 
       <div class="clearfix"></div>
       <!-- The Modal -->
@@ -418,11 +508,11 @@
               </p>
   
               <aside class="social-links">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                <a href="https://twitter.com/havishaenterta1" class="twitter"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/people/havisha-entertainment/100090392806465/" class="facebook"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/havishaevents/" class="instagram"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCnNiUrjbebeeGvfFMj6X7MQ" class="youtube"><i class="fa fa-youtube"></i></a>
+                <a href="https://www.linkedin.com/in/havisha-entertainment-75a586267/" class="linkedin"><i class="fa fa-linkedin"></i></a>
               </aside>
   
             </section>
@@ -434,6 +524,7 @@
           &copy; Copyright  <strong>Havisha Events</strong>. All Rights Reserved
         </article>
         <article class="credits">
+          Designed & Developed by Dharmik Gohil <a href="tel:+918160607144">+91 8160607144</a>
         </article>
       </section>
     </footer>
